Merged PR 11924: Revert "Merged PR 11923: Endpoint Obtener Listado de Actividad Económica
Revert "Merged PR 11923: Endpoint Obtener Listado de Actividad Económica

# [NGM-5380](https://acelerabga.atlassian.net/browse/NGM-5380) - [BFF] Creación de servicio de obtención de actividad económica

Se creó el endpoint para obtener las listas de Actividad Economica del Módulo Actualización de Datos

## Cambios

- UserController
- UserService
- PersonalInformationNetProvider
- Test

Cherry picked from !11899"

Reverted commit `f3d56f75`.